--- a/index2.html
+++ b/index2.html
@@ -18,5 +18,23 @@
         <h1>Insight of Insight</h1>
         <h1>No Insight of Insight</h1>
     </div>
+    <div>
+        <h1>styled unordered list</h1>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+
+        </ul>
+        <h1>Styled ordered list</h1>
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+        </ol>
+
+    </div>
 </body>
 </html>
